# headerspoof

./: README.md  pyproject.toml
src/header_spoof/: __init__.py  cli.py
src/headerspoof/: cli.py  core.py
tests/: test_core.py
